assets/css/style.css
/* ... */
.tabs-conten-1 h4 a {
  color: inherit;
}

.tabs-content-1 p {
  font-size: 14px;
  color: #7a7a7a;
  margin-bottom: 0px;
}

.dropdown-item.active,
.dropdown-item:active {
  background-color: #1e1e1e;
}

/* Contact Information */

.contact-information {
  margin-top: 140px;
}

.contact-information .contact-item {
  padding: 60px 30px;
  background-color: #f7f7f7;
  text-align: center;
}

.contact-information .contact-item i {
  color: #1e1e1e;
  font-size: 48px;
  margin-bottom: 40px;
}

.contact-information .contact-item h4 {
  font-size: 20px;
  font-weight: 700;
  letter-spacing: 0.25px;
  margin-bottom: 15px;
}

.contact-information .contact-item p {
  margin-bottom: 20px;
}

.contact-information .contact-item a {
  font-weight: 600;
  color: #1e1e1e;
  font-size: 15px;
}

/* Responsive Style */
@media (max-width: 768px) {
  .sub-header {
    display: none;
  }

  .Modern-Slider .item h6 {
    margin-bottom: 15px;
    font-size: 18px;
  }

  .Modern-Slider .item h4 {
    margin-bottom: 25px;
    font-size: 28px;
    line-height: 36px;
    letter-spacing: 1px;
  }

  .Modern-Slider .item p {
    max-width: 570px;
    line-height: 25px;
    margin-bottom: 30px;
  }

  .Modern-Slider .NextArrow {
    right: 5px;
  }

  .Modern-Slider .PrevArrow {
    left: 5px;
  }

  .request-form {
    text-align: center;
  }

  .request-form a.border-button {
    float: none;
    margin-top: 30px;
  }

  .services .service-item {
    margin-bottom: 30px;
  }

  .fun-facts .left-content {
    margin-right: 0px;
    margin-bottom: 30px;
  }

  .more-info .right-content {
    padding: 30px;
  }

  footer {
    padding: 80px 0px 20px 0px;
  }

  footer .footer-item {
    border-bottom: 1px solid #343434;
    margin-bottom: 30px;
    padding-bottom: 30px;
  }

  footer .last-item {
    border-bottom: none;
  }

  .about-info .right-content {
    margin-right: 0px;
    margin-bottom: 30px;
  }

  .team .team-item {
    margin-bottom: 30px;
  }

  .tabs-content {
    margin-left: 0px;
    margin-top: 30px;
  }

  .tabs-content-1 {
    margin-left: 0px;
    margin-top: 30px;
  }

  .contact-item {
    margin-bottom: 30px;
  }
}

@media (max-width: 992px) {
  .navbar .navbar-brand {
    position: absolute;
    left: 30px;
    top: 10px;
  }

  .navbar .navbar-brand {
    width: auto;
  }

  .navbar:after {
    display: none;
  }

  #navbarResponsive {
    z-index: 99999;
    position: absolute;
    top: 80px;
    left: 0;
    width: 100%;
    text-align: center;
    background-color: #fff;
    box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.1);
  }

  .navbar .navbar-nav .nav-item {
    border-bottom: 1px solid #eee;
  }

  .navbar .navbar-nav .nav-item:last-child {
    border-bottom: none;
  }

  .navbar .navbar-nav a.nav-link {
    padding: 15px 0px;
    color: #1e1e1e !important;
  }

  .navbar .navbar-nav .nav-link:hover,
  .navbar .navbar-nav .active > .nav-link,
  .navbar .navbar-nav .nav-link.active,
  .navbar .navbar-nav .nav-link.show,
  .navbar .navbar-nav .show > .nav-link {
    color: #1e1e1e !important;
    border-bottom: none !important;
  }
}

h5 a {
  color: #1e1e1e;
}

h5 a:hover {
  color: inherit;
}

/* logo image in banner */
a.navbar-brand img {
  height: auto;
  width: 11%;
  display: inline-block;
}

@media screen and (max-width: 500px) {
  a.navbar-brand img {
    width: 12%;
  }
}

/* centering and sizing video*/
.video {
  padding-top: 50px;
}

.row {
  display: -ms-flexbox;
  display: flex;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-right: -15px;
  margin-left: -15px;
  justify-content: center;
}

.video iframe {
  width: 75%;
  height: 481px;
}

.service-row {
  display: flex;
}
.service-row > div {
  font-size: 4vh;
  color: white;
  background: #1e1e1e;
  margin: 0.1em;
  padding: 0.3em;
  border-radius: 3px;
  flex: 1;
  margin: 10px;
  align-items: center;
}
.service-image img{
  display:flex;
  width: 20%;
  height: auto;
  float: left;
}
.service-title p{
	font-size: 3vh;
	color: white;
	display: flex;
    justify-content: center;
    text-align: center;
    width: 79%;
	line-height: 130%;
}

@media screen and (max-width: 920px){
	.service-row {
		flex-direction: column;
		margin-left: 10%;
		margin-right: 10%;
	}
  .service-image{
    display: flex;
    justify-content: center;
  }

  .service-title{
    display: flex;
    justify-content: center;
  }
}

.yelpwidget{
  background: #1e1e1e;
}

